syntax = "proto3";

package tests.message;

import "patch/go.proto";

option go_package = "github.com/alta/protopatch/tests/message";

message Francis {
	option (go.message).name = 'Frank';
}

message OriginalOneofMessage {
	option (go.message).name = 'RenamedOneofMessage';
	oneof contents {
		int32 id = 1;
		string name = 2;
	};
}

message OriginalOuterMessage {
	option (go.message).name = 'RenamedOuterMessage';
	message InnerMessage {}
	InnerMessage inner = 1;
}

message OuterMessageWithRenamedInnerMessage {
	message InnerMessage {
		option (go.message).name = 'RenamedInnerMessage';
	}
	InnerMessage inner = 1;
}

message MessageWithRenamedField {
	int32 id = 1 [(go.field).name = 'ID'];
}

message MessageWithEmbeddedField {
  Embedded embedded_message = 5 [(go.field).embed = true];
}

message Embedded {
  string message = 1;
}
